# decentnoobbot

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  deploy.yml  image.yml
src/: main.rs
