[package]
name = "decentnoobbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.78"
disruption = "0.1.0"
env_logger = "0.11.3"
tokio = { version = "1.36.0", features = ["full"] }
