[package]
name = "decentnoobbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
disruption = "0.1.0"
env_logger = "0.11.5"
tokio = { version = "1.42.0", features = ["full"] }
